<resources>
    <string name="app_name">VehicleFinesPrototype</string>
    <string name="loading">Загрузка…</string>

    <string name="welcome_button_enter">ВВЕСТИ ДАННЫЕ</string>
    <string name="welcome_gibdd_fines">Штрафы ГИБДД</string>
    <string name="welcome_check_fines">Проверьте штрафы\nв официальных источниках</string>
    <string name="welcome_gibdd_logo">ГИБДД</string>
    <string name="welcome_treasury_logo">Казначейство</string>
    <string name="welcome_gosuslugi_logo">Госуслуги</string>

    <string name="hint_reg_number">А000АА 77</string>
    <string name="hint_passport_number">00 АА 000000</string>
    <string name="hint_driver_licence">00 АА 000000</string>

    <string name="wizard_button_proceed">ДАЛЕЕ</string>
    <string name="wizard_button_skip">ПРОПУСТИТЬ</string>

    <string name="wizard_reg_number_title">Укажите регистрационный номер ТС</string>
    <string name="wizard_passport_number_title">Введите номер свидетельства о регистрации ТС</string>
    <string name="wizard_driver_licence_title">Введите номер водительского удостоверения</string>

    <string name="overview_title">Мои данные</string>
    <string name="overview_reg_number_label">Регистрационный номер ТС</string>
    <string name="overview_passport_number_label">Свидетельство о регистрации ТС</string>
    <string name="overview_driver_licence_label">Водительское удостоверение</string>
    <string name="overview_warning_label">Внимание!\nДанный раздел находится в разработке</string>
    <string name="overview_empty_placeholder">Информация отсутствует</string>

    <string name="skip_enter_dialog">Пропустить</string>
    <string name="dismiss_enter_dialog">Ввести номер</string>
    <string name="skip_reg_number_dialog_title">Если вы не введете регистрационный номер ТС, вы не сможете следить за штрафами, выписанными на автомобиль</string>
    <string name="skip_passport_number_dialog_title">Если вы не введете номер свидетельства о регистрации ТС, вы не сможете следить за штрафами, выписанными на автомобиль</string>
    <string name="skip_driver_licence_dialog_title">Если вы не введете номер водительского удостоверения, вы не сможете следить за штрафами, выписанными на водителя</string>

    <string name="reg_number_invalid">Номерной знак введен некорректно</string>
    <string name="passport_number_invalid">Номер СТС введен некорректно</string>
    <string name="licence_number_invalid">Номер ВУ введен некорректно</string>

    <string name="allowed_characters_reg_number">0123456789АВЕКМНОРСТУХABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="allowed_characters_passport_and_licence">0123456789АВЕКМНОРСТУХABEKMHOPCTYX</string>
    
    <string name="walkthrough_push_notifications">Получайте push-уведомления о новых штрафах</string>
    <string name="walkthrough_pay_via_app">Оплачивайте штрафы через приложение</string>
    <string name="walkthrough_discount">Скидка 50%</string>
    <string name="walkthrough_bank_receipt">Получайте квитанцию, как в банке</string>
    <string name="walkthrough_guarantee">Гарантия погашения в государственной базе данных</string>
    <string name="walkthrough_observe_rules">Соблюдайте правила дорожного движения.</string>
    <string name="walkthrough_get_fines">УЗНАТЬ ШТРАФЫ</string>
</resources>
