<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_wizard_reg_number"
        style="@style/TextAppearance.Subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_normal_16"
        android:text="@string/wizard_reg_number_title"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_wizard_reg_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/spacing_normal_16"
        android:paddingTop="@dimen/spacing_normal_16"
        android:paddingEnd="@dimen/spacing_normal_16"
        app:layout_constraintTop_toBottomOf="@id/tv_wizard_reg_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_wizard_reg_number"
            style="@style/TextAppearance.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_reg_number"
            android:inputType="textCapCharacters" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_wizard_reg_number_skip"
        style="@style/SkipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_large_32"
        android:text="@string/wizard_button_skip"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_wizard_reg_number_proceed"
        app:layout_constraintEnd_toStartOf="@+id/btn_wizard_reg_number_proceed" />

    <Button
        android:id="@+id/btn_wizard_reg_number_proceed"
        style="@style/Buttons.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:text="@string/wizard_button_proceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_wizard_reg_number" />

</androidx.constraintlayout.widget.ConstraintLayout>
